--- a/index.html
+++ b/index.html
@@ -507,6 +507,69 @@
                             <i class="fas fa-paper-plane"></i>
                         </button>
                     </form>
+                    <script>
+                        document.addEventListener('DOMContentLoaded', () => {
+                            const form = document.getElementById('contactForm');
+                            const submitButton = document.getElementById('formSubmitButton');
+
+                            // لو المتغيرات العالمية مش موجودة، نضيف قيم افتراضية لتجنب الأخطاء
+                            const safeCurrentLanguage = (typeof currentLanguage !== 'undefined') ? currentLanguage : 'ar';
+                            const safeAlertTranslations = (typeof alertTranslations !== 'undefined') ? alertTranslations : {
+
+                                ar: {
+                                    contactError: 'Please fill in all required fields.',
+                                    contactSuccess: 'Your message has been sent successfully.'
+                                }
+                            };
+
+                            form.addEventListener('submit', function (e) {
+                                e.preventDefault();
+
+                                const name = document.getElementById('name').value.trim();
+                                const email = document.getElementById('email').value.trim();
+                                const message = document.getElementById('message').value.trim();
+                                const subject = document.getElementById('subject').value.trim();
+
+                                // حفظ النص الأصلي للزر
+                                const originalButtonHTML = submitButton.innerHTML;
+
+                                // إظهار السبينر والنص
+                                submitButton.disabled = true;
+                                submitButton.innerHTML = `
+
+
+            ${safeCurrentLanguage === 'ar' ? `
+            <svg aria-hidden="true" class="inline w-5 h-5 mr-2 text-white animate-spin" viewBox="0 0 100 101" fill="none">
+                <path d="M50 0a50 50 0 1 1-35.355 14.645A49.98 49.98 0 0 1 50 0zm0 9a41 41 0 1 0 29.002 11.998A40.97 40.97 0 0 0 50 9z" fill="#fff"/>
+            </svg>` : ''}
+        `;
+
+                                // محاكاة الإرسال لمدة ثانية
+                                setTimeout(() => {
+                                    if (!name || !email || !message || !subject) {
+                                        // استرجاع الزر الأصلي
+                                        submitButton.disabled = false;
+                                        submitButton.innerHTML = originalButtonHTML;
+
+
+                                    } else {
+                                        // نجاح الإرسال
+                                        submitButton.disabled = true;
+                                        submitButton.innerHTML = originalButtonHTML;
+
+                                        Swal.fire({
+                                            icon: 'success',
+                                            title: safeCurrentLanguage === 'ar' ? 'Success' : '',
+                                            text: safeAlertTranslations[safeCurrentLanguage]?.contactSuccess || safeAlertTranslations['ar'].contactSuccess,
+                                            confirmButtonText: safeCurrentLanguage === 'ar' ? 'OK' : 'OK'
+                                        }).then(() => {
+                                            form.reset();
+                                        });
+                                    }
+                                }, 1000);
+                            });
+                        });
+                    </script>
                 </div>
             </div>
 
@@ -937,15 +1000,6 @@
                         title: currentLanguage === 'ar' ? 'خطأ' : 'Error',
                         text: alertTranslations[currentLanguage].contactError,
                         confirmButtonText: currentLanguage === 'ar' ? 'حسناً' : 'OK'
-                    });
-                } else {
-                    Swal.fire({
-                        icon: 'success',
-                        title: currentLanguage === 'ar' ? 'تم الإرسال' : 'Success',
-                        text: alertTranslations[currentLanguage].contactSuccess,
-                        confirmButtonText: currentLanguage === 'ar' ? 'موافق' : 'OK'
-                    }).then(() => {
-                        this.reset();
                     });
                 }
             });
