--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
             <div class="flex flex-col md:flex-row justify-center gap-4">
                 <button
                     class="bg-white text-blue-900 font-bold py-3 px-8 rounded-full hover:bg-gray-100 transition duration-300 dark:bg-blue-700 dark:text-white dark:hover:bg-blue-600"
-                    onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });">
+                    id="heroButton1" onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });"</button>>
                     تجربة النظام
-                    </button>
-
-                    <button
-                        class="border-2 border-white text-white font-bold py-3 px-8 rounded-full hover:bg-white hover:text-blue-900 transition duration-300 dark:hover:bg-blue-700 dark:hover:text-white"
-                        onclick="document.getElementById('features').scrollIntoView({ behavior: 'smooth' });">
-                        تعرف أكثر
-                    </button>
-
+                </button>
+                <button
+                    class="border-2 border-white text-white font-bold py-3 px-8 rounded-full hover:bg-white hover:text-blue-900 transition duration-300 dark:hover:bg-blue-700 dark:hover:text-white"
+                    id="heroButton2"
+                    onclick="document.getElementById('features').scrollIntoView({ behavior: 'smooth' });"
+                    >
+                    تعرف أكثر
+                </button>
             </div>
         </div>
     </section>
