--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="feature-card bg-white dark:bg-gray-800 p-8 rounded-lg shadow-md transition duration-300">
                     <div
                         class="w-16 h-16 bg-blue-100 dark:bg-blue-800 rounded-full flex items-center justify-center mb-6">
-                        <i class="fas fa-customize text-blue-900 dark:text-blue-200 text-2xl"></i>
+                        <i class="fas fa-puzzle-piece text-blue-900 dark:text-blue-200 text-2xl"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-4 text-gray-900 dark:text-gray-100" id="feature4Title">تخصيص المحتوى
                     </h3>
